<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".FirstFrag"
              android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:background="@drawable/tumblr_olr94rikrj1vlaq4no1_400"
                android:layout_gravity="center_vertical">
        </LinearLayout>
        <android.support.v7.widget.CardView
                android:layout_width="370dp"
                android:layout_height="300dp"
                app:cardCornerRadius="30dp"
                android:elevation="40dp"
                android:layout_marginTop="-189dp"
                android:layout_gravity="center"
                tools:targetApi="lollipop">
            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="-60dp"
                    android:src="@drawable/harris"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#000000"
                    android:layout_gravity="center"/>
            <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/abdul_haris_setyawan"
                    android:textSize="20sp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/src_bold"
                    android:textColor="#000000"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/semarang_id"
                    android:layout_marginTop="46dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/src_reg"
                    android:textColor="#000000"
                    android:textAlignment="center"/>
            <LinearLayout android:layout_width="330dp"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="bottom|center"
                          android:gravity="center_horizontal">
                <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="17dp"
                        android:layout_marginLeft="15dp" android:layout_marginStart="15dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_22"
                            android:layout_gravity="center"
                            android:textSize="35sp"
                            android:fontFamily="@font/src_bold"
                            android:textAlignment="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age"
                            android:layout_gravity="center"
                            android:layout_marginTop="-10dp"
                            android:textSize="15sp"
                            android:fontFamily="@font/src_reg"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="17dp"
                        android:layout_marginLeft="15dp" android:layout_marginStart="15dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_165"
                            android:layout_gravity="center"
                            android:textSize="35sp"
                            android:fontFamily="@font/src_bold"
                            android:textAlignment="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height"
                            android:layout_gravity="center"
                            android:layout_marginTop="-10dp"
                            android:textSize="15sp"
                            android:fontFamily="@font/src_reg"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="17dp"
                        android:layout_marginLeft="15dp" android:layout_marginStart="15dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_60"
                            android:layout_gravity="center"
                            android:textSize="35sp"
                            android:fontFamily="@font/src_bold"
                            android:textAlignment="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight"
                            android:layout_gravity="center"
                            android:layout_marginTop="-10dp"
                            android:textSize="15sp"
                            android:fontFamily="@font/src_reg"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="370dp"
                android:layout_height="100dp"
                app:cardCornerRadius="15dp"
                android:elevation="40dp"
                android:layout_marginTop="19dp"
                android:layout_gravity="center"
                tools:targetApi="lollipop"
                android:layout_marginBottom="20dp">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">
                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center|top">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="About"
                              android:fontFamily="@font/src_bold"
                              android:textSize="21sp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="340dp"
                        android:layout_height="67dp"
                        android:layout_gravity="center">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/about"
                            android:layout_marginTop="5dp"
                            android:textSize="20sp"
                            android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>